
              libnetpbm: Improve error message for purported image that is
              exactly 1 byte long (so ends in the middle of what would be the
              magic number).

              pbmtox10bm: Get the Perl interpreter for this Perl program from
              the PATH instead of hardcoded as /usr/bin/perl (like all other
              Netpbm Perl programs).

              bmptopnm: fix crash when input is a Windows BMP with negative
              number for width.  Always broken.  (bmptopnm was new, as
              bmptoppm, in original Netpbm, 1992).

              pamcomp: fix incorrect output with -mixtransparency.
              Always broken.  (-mixtransparency was new in Netpbm 10.56,
              September 2011).

              pamcomp: remove debug trace message with -mixtransparency.
              Always broken.  (-mixtransparency was new in Netpbm 10.56,
              September 2011).

              pnmtojpeg: fix array bounds violation in argument list.  Always
              broken (pnmtojpeg was new to Netpbm in Netpbm 8.2 (March 2000).

              pamcrater: fix incorrect output with non-square image.
              Introduced in Netpbm 10.69 (December 2014).

              svgtopam: fix treating negative width or height values in SVG
              like twos complement positive numbers; fail instead.  Always
              broken (svgtopam was new in Netpbm 10.33 (March 2006)).

              svgtopam: fix error messages when input has splines or negative
              positions.  Always broken (svgtopam was new in Netpbm 10.33
              (March 2006)).

              libnetpbm: fix bug: pm_system_XXX closes Standard Input if you
              supply a Standard Output accepter but not a Standard Input
              feeder.  Broken since Netpbm 10.40 (September 2007).

              Windows: fix bug: pm_system_lp() and pm_system_vp() fail
              silently instead of with a clear error message in an environment